2009-08-14  Jiahua Huang  <jhuangjiahua@gmail.com>

        Reviewed by Jan Alonzo.

        [gtk] Pasteboard/GtkClipboard can't handle the "text/html" target.
        https://bugs.webkit.org/show_bug.cgi?id=27028

        Add a function in WebKit::PasteboardHelperGtk that will return the
        value of WEBKIT_WEB_VIEW_TARGET_INFO_HTML,
        and WebCore::clipboard_get_contents_cb will use that.

        * WebCoreSupport/PasteboardHelperGtk.cpp:
        (WebKit::PasteboardHelperGtk::getWebViewTargetInfoHtml):
        * WebCoreSupport/PasteboardHelperGtk.h:

2009-08-14  Benjamin Otte  <otte@gnome.org>

        Reviewed by Gustavo Noronha.

        Fix webkit_web_view_set_highlight_text_matches() so that highlighting
        works properly in documents with frames.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_set_highlight_text_matches):

2009-08-13  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        [GTK] Drag and drop support
        https://bugs.webkit.org/show_bug.cgi?id=23642

        Adds support for drag actions in WebKitWebView and DragClient.

        Defines a support structure that can hold additional drag and drop data,
        such as selection data or target IDs (infos) and can be passed through
        clipboard requests.

        Implements DragClient functions that gather start position of the drag
        and start the GTK drag.

        * WebCoreSupport/DragClientGtk.cpp:
        (WebKit::DragClient::DragClient):
        (WebKit::DragClient::willPerformDragSourceAction):
        (WebKit::DragClient::startDrag):
        (WebKit::DragClient::createDragImageForLink): A small style fix.
        * WebCoreSupport/DragClientGtk.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_drag_end):
        (clipboard_contents_received): GtkClipboard callback.
        (webkit_web_view_drag_data_get):
        (webkit_web_view_class_init):
        (webkit_web_view_init):